feat(localnet): better faucet, info for contract type, latest ABI catalog
